# ML-DSA

./: Cargo.toml
src/: bytes.rs  main.rs  operation_types.rs  params.rs  utils.rs
src/internal/: keygen.rs
src/keygen/: keygen.rs
src/operation_traits/: ntt.rs
src/operation_types/: byte_array.rs  polynomials.rs
src/utils/: matmul.rs  ntt.rs
