[package]
name = "ML-KEM"
version = "0.1.0"
edition = "2024"

[build]
rustflags = ["-A non_snake_case dead_code unused_variables"]

[dependencies]
bit_reverse = "0.1.8"
generic-array = "1.2.0"
log = "0.4.27"
matrix = "0.22.0"
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
num = "0.4.3"
rand = "0.9.1"
rayon = "1.10.0"
sha3 = "0.10.8"
simplelog = "0.12.2"



[lints.rust]
unused = "allow"
unused_braces = "allow"
non_snake_case = "allow"
